improve scalability by using virtual threads