@@ -1,6 +1,5 @@
 package com.sparrowwallet.frigate.electrum;
 
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import com.sparrowwallet.frigate.bitcoind.BitcoindClient;
 import com.sparrowwallet.frigate.index.IndexQuerier;
 import org.slf4j.Logger;
@@ -11,7 +10,6 @@ import java.net.ServerSocket;
 import java.net.Socket;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadFactory;
 
 public class ElectrumServerRunnable implements Runnable {
     private static final Logger log = LoggerFactory.getLogger(ElectrumServerRunnable.class);
@@ -23,12 +21,7 @@ public class ElectrumServerRunnable implements Runnable {
     protected ServerSocket serverSocket = null;
     protected boolean stopped = false;
     protected Thread runningThread = null;
-    protected ExecutorService requestPool = Executors.newFixedThreadPool(10, r -> {
-        ThreadFactory namedThreadFactory = new ThreadFactoryBuilder().setNameFormat("ElectrumServerRequest-%d").build();
-        Thread t = namedThreadFactory.newThread(r);
-        t.setDaemon(true);
-        return t;
-    });
+    protected ExecutorService requestPool = Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("ElectrumServerRequest-", 0).factory());
 
     public ElectrumServerRunnable(BitcoindClient bitcoindClient, IndexQuerier indexQuerier) {
         this.bitcoindClient = bitcoindClient;
